--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,16 @@
 h3 {
 	margin: 0;
 }
+/* Custom Calendar CSS */
+.CalendarDay__selected, .CalendarDay__selected:active, .CalendarDay__selected:hover {
+	background: #337ab7 !important;
+	border: 1px solid #337ab7 !important;
+}
+
+.DateInput_input__focused {
+	border-bottom: 2px solid #337ab7 !important;
+}
+/* End Custom Calendar CSS */
 .titleNews {
 	min-height: 35px;
 }
@@ -25,7 +35,6 @@ h3 {
 	color: #FFF;
 	font-size: 30px;
 }
-
 #savedSection .panel-body {
     padding: 0;
 }
@@ -37,4 +46,10 @@ h3 {
 	border-color: #337ab7;
 	border-style: solid;
 	padding: 10px;
+}
+#searchSection input.DateInput_input {
+	height: 34px;
+}
+#searchSection .panel-form-group {
+	margin-bottom: 15px; 
 }
